<resources>
    <string name="app_name">Beatify</string>
    <string name="title_activity_start_up">StartUp</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="category_happy">Happy</string>
    <string name="category_sad">Sad</string>
    <string name="category_excited">Excited</string>
    <string name="title_activity_main">Playlists</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="no_playlist">No playlist</string>
    <string name="playlist">Playlists</string>
    <string name="no_device">No device</string>
    <string name="available_device">Available devices</string>
    <string name="heart_rate">Heart Rate (bpm)</string>
    <string name="heart_rate_no_data">Heart Rate (bpm): No data</string>
    <string name="no_tracks">No tracks</string>
    <string name="about">About</string>

    <string name="track_name_label">Track:</string>
    <string name="track_artists_label">Artists:</string>
    <string name="track_bpm_label">bpm:</string>
    <string name="track_name_unknown">Unknown track</string>
    <string name="track_album_unknown">Unknown album</string>
    <string name="track_duration_unknown">Unknown duration</string>
    <string name="track_artists_unknown">Unknown artists</string>

    <string name="spotify_id">User ID</string>
    <string name="spotify_displayname">Display name</string>
    <string name="spotify_unknown_playlist">Unknown playlist</string>
    <string name="spotify_nr_tracks">Number of Tracks</string>
    <string name="spotify_reload">Refresh</string>

    <!-- player-->
    <string name="next">next</string>
    <string name="prev">previous</string>
    <string name="noprev">There is no previous track.</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="select_playlist">Please select a playlist.</string>


    <!-- bluetooth -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data available</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connected_device">Connected Device</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_refresh">Refresh</string>
    <string name="title_activity_bluethooth_devices">BluethoothDevicesActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_device_scan">Bluetooth Devices</string>
    <string name="title_activity_tracks">Tracks</string>
    <string name="title_activity_about">About</string>

    <!-- about -->
    <string name="copyright">All rights reserved.</string>
    <string name="devs_label">Developers</string>
    <string name="devs_th">Thomas Hütter (<email>thomas.huetter@cs.uni-salzburg.at</email>)</string>
    <string name="devs_fs">Mehmet Furkan Şahin (<email>sahinffurkan@gmail.com</email>)</string>
    <string name="devs_mp">Mario Preishuber (<email>mario.preishuber@cs.uni-salzburg.at</email>)</string>
    <string name="license_label">License</string>
    <string name="license">"
        The MIT License (MIT)

        Copyright (c) 2015 Beatify

        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:

        The above copyright notice and this permission notice shall be included in all
        copies or substantial portions of the Software.

        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
        SOFTWARE."
    </string>

    <string name="license_add_label">License additions</string>
    <string name="license_add_iconify">"
        Beatify uses Iconify by Joan Zapata, Damien Villeneuve, and Mike Penz,
        licensed under the Apache License, Version 2.0, which may be obtain at
        http://www.apache.org/licenses/LICENSE-2.0 ."
    </string>
    <string name="license_add_awesomefont">"
        Beatify uses FontAwesome font by Dave Gandy,
        licensed under OFL 1.1, which is compatible with this library's license.
        http://scripts.sil.org/OFL"
    </string>
    <string name="license_add_kaaes">"
        Beatify uses spotify-web-api-android by kaaes,
        licensed under MIT.
        https://github.com/kaaes/spotify-web-api-android"
    </string>
    <string name="license_add_echonest">"
        Beatify uses Echo Nest API by Echo Nest,
        licensed under special conditions, which can be found on the company's webpage.
        http://the.echonest.com/"
    </string>

    <string name="le_bluetooth_warning_label">Info</string>
    <string name="le_bluetooth_warning">To discover how magnificent Beatify is we recommend you to use a LowEnergy Bluetooth device.</string>

</resources>
