<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_about"
    tools:context="beatify.labonappsdevelopment.beatify.about"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/beatify_logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/beatify_red"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"/>

            <TextView
                android:id="@+id/beatify_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32dp"
                android:layout_below="@id/beatify_logo"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/copyright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:layout_below="@id/beatify_name"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/devs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/copyright"
                android:layout_centerHorizontal="true"
                android:text="@string/devs_label"
                android:textSize="24dp"
                android:layout_marginTop="50dp"/>

            <RelativeLayout
                android:id="@+id/devs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/devs_label"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/devs_th"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devs_th"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/devs_fs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devs_fs"
                    android:layout_below="@id/devs_th"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/devs_mp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/devs_mp"
                    android:layout_below="@id/devs_fs"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>


            <TextView
                android:id="@+id/licence_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/devs"
                android:layout_centerHorizontal="true"
                android:text="@string/license_label"
                android:textSize="24dp"
                android:layout_marginTop="50dp"/>

            <RelativeLayout
                android:id="@+id/licences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/licence_label"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/licence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/licence_add_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/licence"
                    android:layout_centerHorizontal="true"
                    android:text="@string/license_add_label"
                    android:textSize="24dp"
                    android:layout_marginTop="50dp"/>


                <TextView
                    android:id="@+id/license_add_iconify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_add_iconify"
                    android:layout_below="@id/licence_add_label"/>

                <TextView
                    android:id="@+id/license_add_awesomefont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_add_awesomefont"
                    android:layout_below="@id/license_add_iconify"/>

                <TextView
                    android:id="@+id/license_add_kaaes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_add_kaaes"
                    android:layout_below="@id/license_add_awesomefont"/>

                <TextView
                    android:id="@+id/license_add_echonest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/license_add_echonest"
                    android:layout_below="@id/license_add_kaaes"/>

                <ImageView
                    android:id="@+id/echonest_logo"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:src="@mipmap/echonest_hr"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/license_add_echonest"/>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
