<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/track_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp">

    <WebView
        android:id="@+id/track_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/track_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_name_label"
        android:layout_margin="2dp"
        android:layout_toRightOf="@id/track_img"/>

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_toRightOf="@id/track_name_label"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/track_artists_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_artists_label"
        android:layout_toRightOf="@id/track_img"
        android:layout_below="@id/track_name_label"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/track_artists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_toRightOf="@id/track_artists_label"
        android:layout_below="@id/track_name"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/track_bpm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_bpm_label"
        android:layout_toRightOf="@id/track_img"
        android:layout_below="@id/track_artists_label"
        android:layout_margin="2dp"/>

    <TextView
        android:id="@+id/track_bpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_toRightOf="@id/track_bpm_label"
        android:layout_below="@id/track_artists"
        android:layout_margin="2dp"
        android:text="@string/no_data"/>
</RelativeLayout>
